--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
 }
 
-body{
-    position: relative;
-}
 
 /*************************************************
  UPPER
@@ -27,16 +24,15 @@ body{
 main{
     width: calc(100% - 250px);
     background-color: red;
-    position: relative;
 }
 
 #upgrade-overlay{
     background-color: blue;
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     height: 100px;
-    width: 100%;
+    width: calc(100% - 250px);
 }
 
 
