--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
-
+.white{
+    color: white;
+}
 /*************************************************
  UPPER
 *************************************************/
 
+/* Regole generali */
 #upper{
-    height: calc(100vh - 100px);
+    height: calc(100vh - 90px);
     background-color: aqua;
     display: flex;
 }
@@ -18,27 +22,39 @@
 #side{
     height: 100%;
     background-color: black;
-    width: 250px;
+    width: 230px;
 }
 
 main{
-    width: calc(100% - 250px);
-    background-color: red;
+    width: calc(100% - 230px);
+    background-color: rgba(20,25,34,255);
 }
 
 #upgrade-overlay{
-    background-color: blue;
+    background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
+    position: relative;
     top: 0;
     right: 0;
-    height: 100px;
-    width: calc(100% - 250px);
+    height: 90px;
+    width: calc(100% - 230px);
 }
 
 
 
+/* Upgrade Overlay */
 
-
+.upgrade-button{
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 12px 35px;
+    border: 1px solid white;
+    border-radius: 20px;
+    font-weight: 600;
+    font-size: 12px;
+}
 
 
 
@@ -56,7 +72,7 @@ main{
 
 footer{
     background-color: rgba(40,40,40,255);
-    height: 100px;
+    height: 90px;
     width: 100%;
     position: fixed;
     bottom: 0;
