--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    color: rgba(163,163,163,255);
+    color: rgba(128,128,128,255);
 }
 
 .white{
@@ -61,6 +61,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    position: relative;
 }
 
 #main-nav{
@@ -126,6 +127,8 @@ h3{
 
 
 
+
+
 /* playlist names */
 
 #playlist-names{
@@ -139,9 +142,46 @@ h3{
 
 
 
+/* download + profile */
 
+#bottom-nav{
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+    width: 100%;
+}
 
+#download{
+    font-size: 13px;
+    font-weight: 600;
+}
 
+#download i{
+    margin-right: 10px;
+}
+
+#bottom-nav hr{
+    margin: 12px 0 16px;
+    width: calc(100% - 40px);
+    height: 1px;
+    border: none;
+    background-color: rgba(128,128,128,255);
+}
+
+#profile{
+    gap: 10px;
+}
+
+#profile-picture{
+    height: 25px;
+    background-color: rgba(128,128,128,255);
+    border-radius: 50%;
+}
+
+#profile-name{
+    font-size: 14px;
+    font-weight: 700;
+}
 
 
 
