--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ h3{
 
 
 
-
+/****************** Main *********************/
 
 
 
@@ -236,4 +236,74 @@ footer{
     position: fixed;
     bottom: 0;
     left: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
+
+
+
+
+/* left footer */
+
+#left-footer{
+    height: 45px;
+    width: 230px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#cover{
+    height: 45px;
+}
+
+#song{
+    padding-left: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+#song-buttons{
+    padding-right: 10px;
+}
+
+#song-name{
+    font-size: 12px;
+    font-weight: 700;
+}
+
+#artist{
+    font-size: 11px;
+    font-weight: 600;
+}
+
+#heart{
+    margin-right: 10px;
+}
+
+/* player */
+
+
+
+
+
+
+
+
+
+
+
+
+/* right footer */
+
+
+
+
+
+
