--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,6 @@ h3{
 
 .cover-img{
     width: 100%;
-    background-size: cover;
 }
 
 .song-name{
@@ -261,6 +260,50 @@ h3{
     font-size: 12px;
     font-weight: 700;
 }
+
+
+
+
+
+/* Created for you */
+
+#for-you{
+    margin-top: 30px;
+}
+
+.info{
+    font-size: 13px;
+    font-weight: 700;
+    margin-top: 10px;
+}
+
+
+#container-for-you{
+    display: flex;
+    flex-direction: row;
+    gap: 10px; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
