--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@
     flex-direction: row;
     align-items: center;
 }
+
+.round-img{
+    border-radius: 50%;
+}
 /*************************************************
  UPPER
 *************************************************/
@@ -206,7 +210,7 @@ h3{
 
 #screen-container{
     background-color: rgba(20,25,34,255);
-    padding: 100px 15px 50px;
+    padding: 100px 15px 140px;
     overflow-y: scroll;
 }
 
@@ -256,7 +260,7 @@ h3{
     margin: 10px 0;
 }
 
-.cover-container p:last-child{
+.cover-container p:nth-child(1){
     font-size: 12px;
     font-weight: 700;
 }
@@ -287,10 +291,17 @@ h3{
 
 
 
+/* Popular Artists */
 
+#popular-artists{
+    margin-top: 30px;
+}
 
-
-
+#container-popular-artists{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
 
 
 
