--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,17 @@
     height: 100%;
     background-color: black;
     width: 230px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 main{
     width: calc(100% - 230px);
     position: relative;
+    height: 100%;
+    overflow: auto;
 }
 
 #upgrade-overlay{
@@ -60,14 +66,6 @@ main{
 /****************** Side *********************/
 
 /* side nav */
-#side{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: fixed;
-    top: 0;
-    left: 0;
-}
 
 #side-nav{
     display: flex;
@@ -210,11 +208,6 @@ h3{
 #screen-container{
     background-color: rgba(20,25,34,255);
     padding: 100px 15px 140px;
-    overflow-y: scroll;
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: calc(100% - 230px);
 }
 
 
@@ -249,12 +242,12 @@ h3{
 #container-recently-played{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
 .cover-container{
-    width: calc(100% / 6);
+    width: calc(100% / 6 - 10px);
     text-align: center;
     margin-top: 30px;
 }
@@ -343,9 +336,6 @@ footer{
     background-color: rgba(40,40,40,255);
     height: 90px;
     width: 100%;
-    position: fixed;
-    bottom: 0;
-    left: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
